# cerberus

./: #Makefile#  .#Makefile  .drone.yml  .emacs.desktop  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgignore  .merlin  0README  CLAUDE.md  Dockerfile  Dockerfile.cheri  Dockerfile.ci  Dockerfile.deps  Dockerfile.dev-env  Dockerfile.redhat  Dockerfile.release  Dockerfile.ubi  Dockerfile.ubuntu  ISSUES  LICENCE  LICENSE  LICENSING  Makefile  Makefile-source  Makefile.common  Makefile.dependencies  Makefile_docker  NOTE-INCR  PROFILING.md  README  README-cheri.md  README.md  STD_status.ods  SWITCHES  THIRD_PARTY_FILES.md  TODO  _CoqProject  (+31 more)
backend/ail_to_coq/: Makefile  _tags  ail_to_coq.ml  cerb_wrapper.ml  cerb_wrapper.mli  comment_annot.ml  coq_ast.ml  coq_pp.ml  dune  extra.ml  location.ml  location.mli  main.ml  panic.ml  rc_annot.ml  test.sh  warn.ml
backend/bmc/: Makefile  _tags  bmc.ml  bmc_cat.ml  bmc_common.ml  bmc_conc.ml  bmc_incremental.ml  bmc_monad.ml  bmc_sorts.ml  bmc_substitute.ml  bmc_types.ml  bmc_utils.ml  dune  functors.ml  kevin.ml  main.ml  rational_ml.ml
backend/cn/: .ocamlformat  CN-COQ.md  CN-Coq.md  CONTRIBUTING.md  FULMINATE_README.md  INSTALL.md  ONBOARDING.md  README.md  TESTING.md  ail_to_c.ml  argumentTypes.ml  assertion_lexer.mll  assertion_parser.mly  assertion_parser_util.ml  assertions.ml  assignment.ml  ast.ml  baseTypes.ml  baseTypes.mli  binaryVerification.ml  binaryVerificationTypes.ml  binding.ml  builtins.ml  cLogicalFuns.ml  cLogicalFuns.mli  cStatements.ml  check.ml  check.mli  cn_internal_to_ail.ml  cn_internal_to_ail.mli  cn_to_ail.ml  cnprog.ml  cnprog.mli  compile.ml  compileEnv.ml  compilePredicates.ml  context.ml  conversions.ml  conversions.ml.old  coreTypeChecks.ml  (+117 more)
backend/common/: Makefile  _tags  auxl.ml  boot_ocaml.ml  boot_pprint2.ml  cerbcore.ml  cerberus_cstubs.c  cmulator.ml  cpp_mem_model.ml  dot.ml  driver_ocaml.ml  driver_ocaml.mli  dune  exhaustive_driver.ml  exhaustive_driver.mli  fs_ocaml.ml  functors.ml  interactive_driver.ml  pipeline.ml  pipeline.mli  position.mli  rational_function.ml  sat_solving.ml  smt.ml  smt_wrapper.ml  tests.ml  twin-opt.ml
backend/csrt/: Makefile  _tags  alrc.ml  argumentTypes.ml  assertions.ml  baseTypes.ml  binders.ml  check.ml  conversions.ml  counterModel.ml  dune  environment.ml  environment.mli  except.ml  explain.ml  false.ml  functionTypes.ml  global.ml  id.ml  indexTermParser.ml  indexTermTyping.ml  indexTerms.ml  kind.ml  labelTypes.ml  lexer.mll  list.ml  list1.ml  listM.ml  local.ml  local.mli  location.ml  locations.ml  locations.mli  logicalConstraints.ml  logicalReturnTypes.ml  logicalSorts.ml  main.ml  memory.ml  memory_aux.ml  model.ml  (+48 more)
backend/driver/: .merlin  Makefile  README.md  _tags  dune  main.ml
backend/web/: Makefile  dune  instance.ml  instance_api.ml  web.ml
coq/: .gitignore  Addr.v  Ail.v  AilAux.v  AilSyntax.v  AilTypes.v  AilTypesAux.v  AilTyping.v  AilTypingAux.v  AilWf.v  Annot.v  CapFns.v  CapFnsTypes.v  Capabilities.v  CheriMemory.v  CoqAilTypesAux.v  CoqAnnot.v  CoqCtype.v  CoqImplementation.v  CoqMakefile  CoqMakefile.conf  CoqMem_common.v  CoqSymbol.v  CoqTags.v  CoqUndefined.v  Ctype.v  ErrorWithState.v  Extract.v  Implementation.v  Makefile  Makefile.conf  Mem_common.v  Memory_model.v  Morello.v  MorelloTests.v  NatMap.v  README.md  Switches.v  Symbol.v  Tags.v  (+6 more)
coq/Cerberus/: CheriMemory.v  CoqSymbol.v  Memory_model.v  dune
coq/CheriMemory/: CerbSwitches.v  CheriMemory.v  CheriMorelloMemory.v  CoqAilSyntax.v  CoqAilTypesAux.v  CoqAnnot.v  CoqCtype.v  CoqImplementation.v  CoqIntegerType.v  CoqLocation.v  CoqMem_common.v  CoqSwitches.v  CoqSymbol.v  CoqTags.v  CoqUndefined.v  ErrorWithState.v  Memory_model.v  dune
coq/Common/: AMap.v  FMapExt.v  SimpleError.v  Utils.v  ZMap.v  dune
coq/Morello/: Addr.v  CapFns.v  Capabilities.v  CapabilitiesGS.v  Morello.v  MorelloCapsGS.v  MorelloTests.v  dune
coq/Proofs/: ProofsAux.v  Revocation.v  Tactics.v  dune
coq/extracted/: CRelationClasses.mli.patch  Extract.v  dune  patch.sh
coq/ocaml_coq/: Extract.v  dune  patch.sh
coq/theories/: CapFnsTypes.v  CheriMemory.v  CoqAnnot.v  CoqCtype.v  CoqMem_common.v  CoqSymbol.v  Morello.v  Utils.v  dune
memory/cheri/: capability.ml  captest.ml  dune  impl_mem.ml  morello.ml  sail_lib.ml  sail_morello.ml  util.ml
ocaml_frontend/: ail_analysis.ml  ail_analysis.mli  boot_printf.ml  boot_printf.mli  cn_ocaml.ml  core_anormalise.ml  core_peval.ml  core_remove_unused_functions.ml  core_rewriter.ml  core_to_mucore.ml  decode.ml  decode_ocaml.ml  dune  impl_mem.mli  memory_model.ml  memory_utils.ml  milicore.ml  milicore_label_inline.ml  mucore.ml  mucore_inline_break.ml  mucore_label_inline.ml  mucore_to_core.ml  ocaml_gcc_builtins.ml  ocaml_implementation.ml  ocaml_implementation.mli  smt2.ml  switches.ml  switches.mli  tags.ml  tags.mli
ocaml_frontend/pprinters/: ast_core.ml  pp_ail.ml  pp_ail.mli  pp_ail_ast.ml  pp_ail_raw.ml  pp_ast.ml  pp_cabs.ml  pp_cabs.mli  pp_cabs0.ml_UNUSED  pp_cmm.ml  pp_cmm.mli  pp_constraints.ml  pp_core.ml  pp_core.mli  pp_core_ast.ml  pp_core_ctype.ml  pp_defacto_memory.ml  pp_defacto_memory.mli  pp_errors.ml  pp_mem.ml  pp_mem.mli  pp_mucore.ml  pp_sb.ml  (+22 more)
runtime/: dune
sibylfs/: LICENSE  META  Makefile  README.md  _tags  abstract_string.ml  abstract_string.mli  dir_heap.lem  dune  fs_printer.ml  fs_spec.lem  list_array.lem  patch_all_ml.sed  patch_dir_heap.sed  patch_gen_ml.sed  sibylfs.lem  sibylfs.mllib
util/: META  Makefile  _tags  cerb_any.ml  cerb_colour.ml  cerb_colour.mli  cerb_debug.ml  cerb_debug.mli  cerb_floating.ml  cerb_global.ml  cerb_global.mli  cerb_json.ml  cerb_location.ml  cerb_location.mli  cerb_position.ml  cerb_position.mli  cerb_pp_prelude.ml  cerb_pp_prelude.mli  cerb_runtime.ml  cerb_runtime.mli  cerb_util.ml  colour.ml  colour.mli  debug_ocaml.ml  debug_ocaml.mli  dune  floating.ml  fresh.ml  global_ocaml.ml  global_ocaml.mli  json.ml  location_ocaml.ml  location_ocaml.mli  logging.ml  logging.mli  myocamlbuild.ml  ocaml_any.ml  pp_prelude.ml  pp_prelude.mli  util.ml
(+8224 files in other folders)
