opam-version: "2.0"
synopsis: "The Cerberus C semantics"
description: "The Cerberus C semantics and related tools."
maintainer: ["FIXME"]
authors: ["FIXME" "FIXME"]
license: "FIXME"
homepage: "https://github.com/rems-project/cerberus-private"
bug-reports: "https://github.com/rems-project/cerberus-private/issues"
depends: [
  "dune" {>= "2.0.0"}
  "sha" {>= "1.12"}
  "pprint" {>= "20180528"}
  "ppx_sexp_conv" {>= "v0.13.0"}
  "sexplib" {>= "v0.13.0"}
  "z3" {= "4.8.4"}
  "cmdliner" {>= "1.0.4"}
  "yojson" {>= "1.7.0"}
  "apron" {>= "v0.9.12"}
  "menhir" {= "20190924"}
  "lem" {= "2020-06-03"}
]
build: [
  ["dune" "subst"] {pinned}
  [make "prelude-src"]
  ["dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/rems-project/cerberus-private.git"
