opam-version: "2.0"
synopsis: "The Cerberus C semantics"
description: "The Cerberus C semantics and related tools."
maintainer: ["Kayvan Memarian <kayvan.memarian@cl.cam.ac.uk>"]
authors: [
  "Kayvan Memarian"
  "Victor Gomes"
  "Justus Matthiesen"
  "Peter Sewell"
  "Kyndylan Nienhuis"
  "Stella Lau"
  "Jean Pichon-Pharabod"
  "Christopher Pulte"
  "Rodolphe Lepigre"
  "James Lingard"
]
license: "BSD-2-Clause"
homepage: "https://www.cl.cam.ac.uk/~pes20/cerberus/"
bug-reports: "https://github.com/rems-project/cerberus/issues"
depends: [
  "dune" {>= "2.0.0"}
  "sha" {>= "1.12"}
  "pprint" {>= "20180528"}
  "ppx_sexp_conv" {= "v0.14.3"}
  "sexplib" {>= "v0.13.0" & <= "v0.14.0"}
  "z3" {>= "4.8.9"}
  "cmdliner" {= "1.0.4"}
  "yojson" {= "1.7.0"}
  "apron" {>= "v0.9.12"}
  "lem" {= "2020-06-03"}
  "menhir" {<= "20211125"}
  "result" {>= "1.4"}
  "ounit2"
  "ppx_deriving"
  "zarith"
  "coq"
  "coq-sail"
  "coq-ext-lib"
  "coq-struct-tact"
]

build: [
  ["dune" "subst"] {pinned}
  [make "prelude-src"]
  ["dune"
    "build"
    "-p"
    name
    "--profile=release"
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/rems-project/cerberus.git"
