opam-version: "2.0"
synopsis: "The CN Coq formalization"
description: "The CN Coq formalization"
maintainer: ["Vadim Zaliva <vz231@cl.cam.ac.uk>"]
authors: [
  "Vadim Zaliva"
  "Christopher Pulte"
  "Thomas Sewell"
  "Dhruv Makwana"
  "Rini Banerjee"
  "Zain K Aamer"
  "Kayvan Memarian"
]
license: "BSD-2-Clause"
homepage: "https://rems-project.github.io/cn-tutorial"
bug-reports: "https://github.com/rems-project/cerberus/issues"
depends: [
  "cn"
  "coq" {>= "8.18.0"}
  "coq-ext-lib"
  "coq-struct-tact"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune"
    "build"
    "-p"
    name
    "--profile=release"
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
