opam-version: "2.0"
synopsis: "The CN type system"
description: "The CN type system"
maintainer: ["Christopher Pulte <cp526@cl.cam.ac.uk>"]
depends: [
  "cerberus-lib"
  "monomorphic"
  "ocaml" {>= "4.14.0"}
  "ppx_deriving"
  "z3" {>= "4.8.14"}
  "cmdliner"
  "ocamlgraph"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune"
    "build"
    "-p"
    name
    "--profile=release"
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
