(coq.theory
 (name Cerberus)
 (modules CapFns CapFnsTypes SimpleError Utils Addr CoqLocation Capabilities Morello CoqAnnot CoqCtype CoqSwitches CoqImplementation CoqAilSyntax CoqAilTypesAux ErrorWithState CoqMem_common Memory_model CoqSymbol CoqUndefined CoqTags CheriMemory)
)

(rule
 (deps extracted/CRelationClasses.mli.patch extracted/patch.sh)
 (target CRelationClasses.ml)
 (action
  (with-stdout-to %{target} (run %{dep:extracted/patch.sh} %{dep:extracted/CRelationClasses.ml})
)))
 
(library
 (name extracted)
 (public_name cerberus.coq)
 (libraries zarith coq-core.kernel)
 (wrapped false)
 (flags (:standard -rectypes -w -27-32-33-39-67-37-20-34))
)
