(include_subdirs unqualified)

(library
 (name cerb_frontend)
 (public_name cerberus.frontend)
 (synopsis "Cerberus frontend")
 (flags (:standard -w -8-9-27-32-33-39))
 (modules :standard \ pp_naive_memory pp_symbolic pp_constraints pp_cmm pp_sb)
 (virtual_modules impl_mem)
 (libraries lem pprint util sibylfs))

(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml unix.cma %{dep:../tools/gen_version.ml})))
 (mode fallback))
