; Core standard library and impl-def files
(install
 (files
  (libcore/impls/gcc_4.9.0_x86_64-apple-darwin10.8.0.impl as runtime/libcore/impls/gcc_4.9.0_x86_64-apple-darwin10.8.0.impl)
  (libcore/impls/i686-apple-darwin10-gcc-4.2.1.impl as runtime/libcore/impls/i686-apple-darwin10-gcc-4.2.1.impl)
  (libcore/std.core as runtime/libcore/std.core)
  (libcore/std_inner_arg_temps.core as runtime/libcore/std_inner_arg_temps.core))
 (section lib)
 (package cerberus-lib))

; C standard library headers
(install
 (files
  (libc/include/assert.h as runtime/libc/include/assert.h)
  (libc/include/builtins.h as runtime/libc/include/builtins.h)
  (libc/include/complex.h as runtime/libc/include/complex.h)
  (libc/include/ctype.h as runtime/libc/include/ctype.h)
  (libc/include/errno.h as runtime/libc/include/errno.h)
  (libc/include/fenv.h as runtime/libc/include/fenv.h)
  (libc/include/float.h as runtime/libc/include/float.h)
  (libc/include/inttypes.h as runtime/libc/include/inttypes.h)
  (libc/include/iso646.h as runtime/libc/include/iso646.h)
  (libc/include/limits.h as runtime/libc/include/limits.h)
  (libc/include/locale.h as runtime/libc/include/locale.h)
  (libc/include/math.h as runtime/libc/include/math.h)
  (libc/include/setjmp.h as runtime/libc/include/setjmp.h)
  (libc/include/signal.h as runtime/libc/include/signal.h)
  (libc/include/stdalign.h as runtime/libc/include/stdalign.h)
  (libc/include/stdarg.h as runtime/libc/include/stdarg.h)
  (libc/include/stdatomic.h as runtime/libc/include/stdatomic.h)
  (libc/include/stdbool.h as runtime/libc/include/stdbool.h)
  (libc/include/stddef.h as runtime/libc/include/stddef.h)
  (libc/include/stdint.h as runtime/libc/include/stdint.h)
  (libc/include/stdio.h as runtime/libc/include/stdio.h)
  (libc/include/stdlib.h as runtime/libc/include/stdlib.h)
  (libc/include/stdnoreturn.h as runtime/libc/include/stdnoreturn.h)
  (libc/include/string.h as runtime/libc/include/string.h)
  (libc/include/tgmath.h as runtime/libc/include/tgmath.h)
  (libc/include/threads.h as runtime/libc/include/threads.h)
  (libc/include/time.h as runtime/libc/include/time.h)
  (libc/include/uchar.h as runtime/libc/include/uchar.h)
  (libc/include/wchar.h as runtime/libc/include/wchar.h)
  (libc/include/wctype.h as runtime/libc/include/wctype.h))
 (section lib)
 (package cerberus-lib))

; Cerberus headers
(install
 (files
  (libc/include/cerberus/any.h as runtime/libcerb/include/cerberus/any.h)
  (libc/include/cerberus/vip.h as runtime/libcerb/include/cerberus/vip.h))
 (section lib)
 (package cerberus-lib))

; CHERI headers
(install
 (files
  (libc/include/cheri/cheric.h as runtime/libcheri/include/cheri/cheric.h)
  (libc/include/cheriintrin.h as runtime/libcheri/include/cheriintrin.h))
 (section lib)
 (package cerberus-lib))

; POSIX headers
(install
 (files
  (libc/include/posix/aio.h as runtime/libc/include/posix/aio.h)
  (libc/include/posix/arpa/inet.h as runtime/libc/include/posix/arpa/inet.h)
  (libc/include/posix/assert.h as runtime/libc/include/posix/assert.h)
  (libc/include/posix/complex.h as runtime/libc/include/posix/complex.h)
  (libc/include/posix/cpio.h as runtime/libc/include/posix/cpio.h)
  (libc/include/posix/ctype.h as runtime/libc/include/posix/ctype.h)
  (libc/include/posix/dirent.h as runtime/libc/include/posix/dirent.h)
  (libc/include/posix/dlfcn.h as runtime/libc/include/posix/dlfcn.h)
  (libc/include/posix/errno.h as runtime/libc/include/posix/errno.h)
  (libc/include/posix/fcntl.h as runtime/libc/include/posix/fcntl.h)
  (libc/include/posix/fenv.h as runtime/libc/include/posix/fenv.h)
  (libc/include/posix/float.h as runtime/libc/include/posix/float.h)
  (libc/include/posix/fmtmsg.h as runtime/libc/include/posix/fmtmsg.h)
  (libc/include/posix/fnmatch.h as runtime/libc/include/posix/fnmatch.h)
  (libc/include/posix/ftw.h as runtime/libc/include/posix/ftw.h)
  (libc/include/posix/glob.h as runtime/libc/include/posix/glob.h)
  (libc/include/posix/grp.h as runtime/libc/include/posix/grp.h)
  (libc/include/posix/iconv.h as runtime/libc/include/posix/iconv.h)
  (libc/include/posix/inttypes.h as runtime/libc/include/posix/inttypes.h)
  (libc/include/posix/iso646.h as runtime/libc/include/posix/iso646.h)
  (libc/include/posix/langinfo.h as runtime/libc/include/posix/langinfo.h)
  (libc/include/posix/libgen.h as runtime/libc/include/posix/libgen.h)
  (libc/include/posix/limits.h as runtime/libc/include/posix/limits.h)
  (libc/include/posix/locale.h as runtime/libc/include/posix/locale.h)
  (libc/include/posix/math.h as runtime/libc/include/posix/math.h)
  (libc/include/posix/monetary.h as runtime/libc/include/posix/monetary.h)
  (libc/include/posix/mqueue.h as runtime/libc/include/posix/mqueue.h)
  (libc/include/posix/ndbm.h as runtime/libc/include/posix/ndbm.h)
  (libc/include/posix/net/if.h as runtime/libc/include/posix/net/if.h)
  (libc/include/posix/netdb.h as runtime/libc/include/posix/netdb.h)
  (libc/include/posix/netinet/in.h as runtime/libc/include/posix/netinet/in.h)
  (libc/include/posix/netinet/tcp.h as runtime/libc/include/posix/netinet/tcp.h)
  (libc/include/posix/nl_types.h as runtime/libc/include/posix/nl_types.h)
  (libc/include/posix/poll.h as runtime/libc/include/posix/poll.h)
  (libc/include/posix/pthread.h as runtime/libc/include/posix/pthread.h)
  (libc/include/posix/pwd.h as runtime/libc/include/posix/pwd.h)
  (libc/include/posix/regex.h as runtime/libc/include/posix/regex.h)
  (libc/include/posix/sched.h as runtime/libc/include/posix/sched.h)
  (libc/include/posix/search.h as runtime/libc/include/posix/search.h)
  (libc/include/posix/semaphore.h as runtime/libc/include/posix/semaphore.h)
  (libc/include/posix/setjmp.h as runtime/libc/include/posix/setjmp.h)
  (libc/include/posix/signal.h as runtime/libc/include/posix/signal.h)
  (libc/include/posix/spawn.h as runtime/libc/include/posix/spawn.h)
  (libc/include/posix/stdarg.h as runtime/libc/include/posix/stdarg.h)
  (libc/include/posix/stdbool.h as runtime/libc/include/posix/stdbool.h)
  (libc/include/posix/stddef.h as runtime/libc/include/posix/stddef.h)
  (libc/include/posix/stdint.h as runtime/libc/include/posix/stdint.h)
  (libc/include/posix/stdio.h as runtime/libc/include/posix/stdio.h)
  (libc/include/posix/stdlib.h as runtime/libc/include/posix/stdlib.h)
  (libc/include/posix/string.h as runtime/libc/include/posix/string.h)
  (libc/include/posix/strings.h as runtime/libc/include/posix/strings.h)
  (libc/include/posix/stropts.h as runtime/libc/include/posix/stropts.h)
  (libc/include/posix/sys/cdefs.h as runtime/libc/include/posix/sys/cdefs.h)
  (libc/include/posix/sys/ioctl.h as runtime/libc/include/posix/sys/ioctl.h)
  (libc/include/posix/sys/ipc.h as runtime/libc/include/posix/sys/ipc.h)
  (libc/include/posix/sys/mman.h as runtime/libc/include/posix/sys/mman.h)
  (libc/include/posix/sys/msg.h as runtime/libc/include/posix/sys/msg.h)
  (libc/include/posix/sys/resource.h as runtime/libc/include/posix/sys/resource.h)
  (libc/include/posix/sys/select.h as runtime/libc/include/posix/sys/select.h)
  (libc/include/posix/sys/sem.h as runtime/libc/include/posix/sys/sem.h)
  (libc/include/posix/sys/shm.h as runtime/libc/include/posix/sys/shm.h)
  (libc/include/posix/sys/socket.h as runtime/libc/include/posix/sys/socket.h)
  (libc/include/posix/sys/stat.h as runtime/libc/include/posix/sys/stat.h)
  (libc/include/posix/sys/statvfs.h as runtime/libc/include/posix/sys/statvfs.h)
  (libc/include/posix/sys/time.h as runtime/libc/include/posix/sys/time.h)
  (libc/include/posix/sys/times.h as runtime/libc/include/posix/sys/times.h)
  (libc/include/posix/sys/types.h as runtime/libc/include/posix/sys/types.h)
  (libc/include/posix/sys/uio.h as runtime/libc/include/posix/sys/uio.h)
  (libc/include/posix/sys/un.h as runtime/libc/include/posix/sys/un.h)
  (libc/include/posix/sys/utsname.h as runtime/libc/include/posix/sys/utsname.h)
  (libc/include/posix/sys/wait.h as runtime/libc/include/posix/sys/wait.h)
  (libc/include/posix/syslog.h as runtime/libc/include/posix/syslog.h)
  (libc/include/posix/tar.h as runtime/libc/include/posix/tar.h)
  (libc/include/posix/termios.h as runtime/libc/include/posix/termios.h)
  (libc/include/posix/tgmath.h as runtime/libc/include/posix/tgmath.h)
  (libc/include/posix/time.h as runtime/libc/include/posix/time.h)
  (libc/include/posix/trace.h as runtime/libc/include/posix/trace.h)
  (libc/include/posix/ulimit.h as runtime/libc/include/posix/ulimit.h)
  (libc/include/posix/unistd.h as runtime/libc/include/posix/unistd.h)
  (libc/include/posix/utime.h as runtime/libc/include/posix/utime.h)
  (libc/include/posix/utmpx.h as runtime/libc/include/posix/utmpx.h)
  (libc/include/posix/wchar.h as runtime/libc/include/posix/wchar.h)
  (libc/include/posix/wctype.h as runtime/libc/include/posix/wctype.h)
  (libc/include/posix/wordexp.h as runtime/libc/include/posix/wordexp.h))
 (section lib)
 (package cerberus-lib))

; C standard library source
(install
 (files
  (libc/src/ctype.c as runtime/libc/src/ctype.c)
  (libc/src/internal.c as runtime/libc/src/internal.c)
  (libc/src/internal.h as runtime/libc/src/internal.h)
  (libc/src/LICENSE as runtime/libc/src/LICENSE)
  (libc/src/locale.c as runtime/libc/src/locale.c)
  (libc/src/math.c as runtime/libc/src/math.c)
  (libc/src/signal.c as runtime/libc/src/signal.c)
  (libc/src/stat.c as runtime/libc/src/stat.c)
  (libc/src/stdio.c as runtime/libc/src/stdio.c)
  (libc/src/stdlib.c as runtime/libc/src/stdlib.c)
  (libc/src/string.c as runtime/libc/src/string.c)
  (libc/src/time.c as runtime/libc/src/time.c)
  (libc/src/uio.c as runtime/libc/src/uio.c)
  (libc/src/unistd.c as runtime/libc/src/unistd.c)
  (libc/src/utime.c as runtime/libc/src/utime.c)
  (libc/src/vfscanf.c as runtime/libc/src/vfscanf.c))
 (section lib)
 (package cerberus))

; Cerberus-BMC files
(install
 (files
  (bmc/c11.cat as runtime/c11.cat)
  (bmc/linux.cat as runtime/linux.cat)
  (bmc/linux.h as runtime/linux.h)
  (bmc/linux_without_rcu.cat as runtime/linux_without_rcu.cat)
  (bmc/luc.2015.cat as runtime/luc.2015)
  (bmc/rc11.cat as runtime/rc11.cat))
 (section lib)
 (package cerberus-bmc))

; ; mostly generated with with the command:
; ; [find * -type f -exec echo "  ({} as runtime/{})" \; >> dune]
