(library
 (name bmc)
 (public_name cerberus-bmc)
 (flags (:standard -w -27-69))
 (wrapped false)
 (modules :standard \ main)
 (c_library_flags -lstdc++)
 (libraries angstrom cerb_frontend cerb_backend z3))

(executable
 (name main)
 (public_name cerberus-bmc)
 (package cerberus-bmc)
 (flags (:standard -w -27))
 (modules main)
 (libraries cmdliner str unix
  cerb_frontend cerb_backend mem_concrete cerb_util bmc))
