(include_subdirs unqualified)

(executable
 (name main)
 (modes exe)
 (public_name cn)
 (package cn)
 (flags
  (:standard -w -37 -open Monomorphic.Int))
 (libraries
  cerb_backend
  cerb_frontend
  cerb_util
  cmdliner
  mem_concrete
  menhirLib
  monomorphic
  ocamlgraph
  result
  str
  unix
  z3)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.fold
   ppx_deriving.map
   ppx_deriving.ord
   ppx_deriving.show)))
