(library
 (name cerb_backend)
 (public_name cerberus-lib.backend_common)
 (synopsis "Cerberus backend utilities")
 (flags (:standard -w -27))
 (modules :standard \ smt smt_wrapper boot_pprint2 tests cerbcore cmulator
  cpp_mem_model interactive_driver sat_solving)
 (foreign_stubs (language c) (names cerberus_cstubs))
 (libraries cerb_frontend core_parser c_parser pprint util z3))
