(include_subdirs unqualified)

(executable
 (name main)
 (modes exe)
 (public_name csrt)
 (package csrt)
 (flags (:standard -w -27))
 (preprocess 
   (per_module 
     ((action (run pa_ocaml %{input-file})) rc_annot)
     (future_syntax 
        check 
        conversions 
        indexTermTyping 
        indexTerms 
        indexTermParser
        listM 
        local 
        memory 
        option 
        pmapM 
        preProcess 
        process 
        resourceInference 
        resources 
        resultat 
        solver 
        symMapM
     )
   )
 )
 (libraries cmdliner str unix stdlib-shims result
  cerb_frontend cerb_backend mem_concrete util earley.core))

(ocamllex lexer)
(menhir (modules parser))
