(include_subdirs unqualified)

(executable
 (name main)
 (modes exe)
 (public_name csrt)
 (package csrt)
 (flags (:standard -w -27))
 (libraries cmdliner str unix
  cerb_frontend cerb_backend mem_concrete util))

(ocamllex lexer)


; Compile tokens.mly into a definition of the type [token].
; https://gitlab.inria.fr/fpottier/menhir/-/blob/master/demos/calc-param/dune
(menhir
  (modules tokens)
  (flags --only-tokens)
)

; Compile parser.mly into a (parameterized) parser.
; We need tokens.mly too, because it contains the token definitions.
; The resulting OCaml files should be named parser.{ml,mli}
; and should *not* contain a definition of the [token] type.
(menhir
  (modules tokens parser)
  (merge_into parser)
  (flags --external-tokens Tokens)
)
