(executable
 (name main)
 (public_name cerberus)
 (package cerberus)
 (modules main)
 (libraries result cmdliner str unix
  cerb_backend mem_concrete))

(executable
 (name main_symbolic)
 (public_name cerberus-symbolic)
 (package cerberus)
 (modules main_symbolic)
 (libraries result cmdliner str unix
  cerb_backend mem_symbolic))

(rule
 (target main_symbolic.ml)
 (deps main.ml)
 (action (copy main.ml main_symbolic.ml)))

(executable
 (name main_vip)
 (public_name cerberus-vip)
 (package cerberus)
 (modules main_vip)
 (libraries result cmdliner str unix
  cerb_backend mem_vip))

(rule
 (target main_vip.ml)
 (deps main.ml)
 (action (copy main.ml main_vip.ml)))

(executable
 (name main_cheri_coq)
 (public_name cerberus-cheri)
 (package cerberus-cheri)
 (modules main_cheri_coq)
 (libraries result cmdliner str unix
            cerb_backend mem_cheri_coq)
 (instrumentation (backend landmarks))
)

(rule
 (target main_cheri_coq.ml)
 (package cerberus-cheri)
 (deps main.ml)
 (action (copy main.ml main_cheri_coq.ml)))
